[package]
name = "rust_webgl"
version = "0.1.0"
edition = "2024"

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Document", "Window", "HtmlCanvasElement",
    "WebGl2RenderingContext", "WebGlProgram",
    "WebGlShader", "WebGlBuffer",
    "Response", "Request", "RequestInit", "RequestMode", "Headers", "console", "Performance",
    "WebGlRenderingContext", "WebGlUniformLocation"
] }
once_cell = "1.9.0"
lazy_static = "1.4"
nalgebra = "*"

[lib]
crate-type = ["cdylib"]
